Update score header

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="home-score"><p class="home-points" id="point_el">0</p></div>
                 <div class="add">
                     <div class="points-btns" onclick="addOne()"><p>+1</p></div>
